--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swiper": "^8.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
