--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.5",
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "swiper": "^8.4.5",
     "redux-persist": "^6.0.0",
-    "sass": "^1.57.1"
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
+    "swiper": "^8.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
