--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.57.1",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.57.1"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
