--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
     "styled-components": "^5.3.6",
