--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.5",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "aos": "^2.3.4",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
