--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-daum-postcode": "^3.1.1",
